# CondEvo

./: .gitignore  LICENSE  README.md  pyproject.toml
condevo/: __init__.py  logger.py  stats.py  utils.py
condevo/diffusion/: __init__.py  ddim.py  diffusion_model.py  rectified_flow.py  v_prediction.py  x_prediction.py
condevo/es/: __init__.py  conditional_diffusion_es.py  heuristical_diffusion_es.py  selection.py  traditional_es.py  utils.py
condevo/es/data/: __init__.py  data_buffer.py
condevo/nn/: __init__.py  cross_attention.py  embeddings.py  multi_layer_perceptron.py  self_attention.py  unet.py
condevo/preprocessing/: __init__.py  min_max_scaler.py  scaler.py  standard_scaler.py
examples/: README.md
examples/conditional/: README.md  analysis.py  benchmark.py  conditional_evolution_examples.ipynb  conditional_evolution_examples_oscillatory-condition.ipynb  configs.py  dynamic-environment-examples.ipynb  fitness_conditional_sampling.py  novelty_conditional_evolution-double_peak.ipynb  novelty_conditional_evolution-helixrastrigin.ipynb  novelty_conditional_evolution-helixrastrigin_model-vs-buffer-sampling.ipynb  novelty_conditional_evolution-rastrigin.ipynb  novelty_conditional_evolution-rastrigin.ipynb.ipynb  novelty_conditional_evolution-rastrigin_model-vs-buffer-sampling.ipynb  run_novelty.py  utils.py
examples/diffusion_evolution/: README.md  parameter_diffusion_scaling.ipynb  parameter_search_hades.py  visualization_score_function.ipynb
examples/evolution/: nd_targets.py
examples/gym/: README.md  condrl.py
examples/mnist/: mnist_classify.py
(+57 files in other folders)
